# PuchiBackend

./: .gitignore  README.md  init_db.py  main.py  pyproject.toml
crud/: ki.py
routers/: ki.py
schema/: database.py  models.py  pydantic_schema.py
